contrib/setup_cluster/test/test_output/TC84/logs.out
NOTICE:  schema "temp_schema" does not exist, skipping
File:install_util.c Function:query_execute L:150 Msg:IMPORT FOREIGN SCHEMA "test_setclusterjdbc" FROM SERVER db4 INTO temp_schema; failed :ERROR:  syntax error at or near "User"
LINE 1: ...S (key 'true'), Db CHAR (1) OPTIONS (key 'true'), User CHAR ...
                                                             ^
QUERY:  CREATE FOREIGN TABLE IF NOT EXISTS columns_priv(Host CHAR (1) OPTIONS (key 'true'), Db CHAR (1) OPTIONS (key 'true'), User CHAR (1) OPTIONS (key 'true'), Table_name CHAR (1) OPTIONS (key 'true'), Column_name CHAR (1) OPTIONS (key 'true'), Timestamp TIMESTAMP, Column_priv SET) SERVER db4;

Config directory: ./
Node information file: node_information.json
Node structure file: node_structure.json
Timeout: 0
Node schema: public
Node on conflict: none
free db2
free db3
free db4
free db5
free db6
free db7
